# diabetoff

./: diabetoff.cabal
css/: style.css
src/: Database.hs  DiabetoffM.hs  IndexPage.hs  Main.hs  Pages.hs  Routing.hs  Template.hs  Types.hs  Visualization.hs
src/Pages/: Index.hs  User.hs
